# DailyProgrammer

./: .gitignore  LICENSE  README.md  SECURITY.md
AdventOfCode/: .gitignore
AdventOfCode/2021/: common.py  download_problems.sh
AdventOfCode/2022/day_24/: input_denoised.txt  prompt.md  pyproject.toml  sln.py  ui.py
AdventOfCode/2023/: .gitignore
AdventOfCode/2023/day_21/: Notes.md  prompt.md  pyproject.toml  sln.py  working out.ipynb  worksheet.py
AdventOfCode/2023/day_21/explored/sample/: steps_10.txt  steps_100.txt  steps_200.txt  steps_300.txt  steps_400.txt  steps_500.txt
AdventOfCode/2023/day_23/: notebook.ipynb  prompt.md  pyproject.toml  sln.py
AdventOfCode/2023/day_24/: notebook.ipynb  prompt.md  pyproject.toml  sln.py
AdventOfCode/2025/: pyproject.toml
AdventOfCode/2025/data/: .gitignore  day_09.compressed_grid.sample.txt
AdventOfCode/2025/src/aoc2025/: __init__.py  common.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  main.py
AdventOfCode/boilerplate/: .gitignore  README.md  pyproject.toml
AdventOfCode/boilerplate/aoc_boilerplate/: __main__.py  main.py  sln.py
C/: badcode.c  conditionals.c  hello.c  linked_lists.c  loops.c  strings.c  time.c  todo.txt  variables.c
C#/TestConsoleApp/: Program.cs
C/intro/: conditionals.c
CNU-PCSE-2016-Programming-Competition/: Printout from Main.java.txt  README.md
CNU-PCSE-2016-Programming-Competition/src/: ExcellentParser.java  Main.java  NumpadWordMatcher.java  ProperNestingVerifier.java  SinusRhythmPlotter.java  YOLOTTL.java
CodeWars/: README.md
CodeWars/3kyu-CanYouGetTheLoop/: Solution.cs
CodeWars/3kyu-JohnConwaysGameOfLife/: GameOfLife.cs  README.md
CodeWars/4kyu-ConnectFour/: ConnectFour.cs
CodeWars/4kyu-MagnetParticles/: README.html
CodeWars/4kyu-RankingPokerHands/: Library.fs  README.md
CodeWars/4kyu-RomanNumerals/: README.md  RomanNumeralDecoder.cs
CodeWars/5kyu - FractionToMixedConverter/: README.md  Solution.cs
CodeWars/5kyu-CarParkEscape/: README.md  solution.fs
CodeWars/5kyu-EsolangInterpreter2SmallF---Interpreter/: README.md  SFInterpreter.fsproj  app.fs  branchMap.fs  interpreter.fs  main.fs
CodeWars/5kyu-GreedIsGood/: README.md
CodeWars/5kyu-RGBtoHexConverter/: README.md
CodeWars/6kyu-FindTheMissingLetter/: README.md
CodeWars/6kyu-RectangleIntoSquares/: README.md  RectangleIntoSquares.sln
CodeWars/7kyu-DontGiveMeFive/: README.md
CodeWars/FractionToMixedConverter/: README.md
CodeWars/GreedIsGood/: Solution.cs
CodeWars/Pi Approximation/: README.md  solution.fs
CodeWars/PiApproximation/: README.html  README.md  solution.fs
CodeWars/TwiceLinear/: README.md  Solution.cs
Cracking the Coding Interview/Go/: README.md  main.go
Cracking the Coding Interview/Python/: .gitignore  (+1 more)
InterviewChallenges/: Readme.md
InterviewChallenges/FastAPI-and-Postgres/: Readme.md  pyproject.toml
InterviewChallenges/FastAPI-and-Postgres/src/: app.py
InterviewChallenges/Firmware-Update-API/: Example Insomnia Collection.json  Readme.md  app.Dockerfile  docker-compose.yml  pyproject.toml  schemas.dbml
InterviewChallenges/Firmware-Update-API/src/: manage.py
InterviewChallenges/Firmware-Update-API/src/device_firmware_version_api/: asgi.py  settings.py  urls.py  wsgi.py
InterviewChallenges/Firmware-Update-API/src/devices/: models.py  serializers.py  urls.py  views.py
InterviewChallenges/Firmware-Update-API/src/devices/migrations/: 0001_initial.py  0002_devicefirmwareupdateevent_dev_fw_update_event_idx.py  0003_rename_projects_project.py  0004_projectapikey_and_more.py  0005_remove_devicefirmwareupdateevent_dev_fw_update_event_idx_and_more.py
Julia/: 02-strings.jl  04-loops.jl
MattParkerMathPuzzles/: Readme.md
ProjectEuler/: main.py  pyproject.toml
Rustlang.Org/: README.md
foobar/: Readme.md
(+587 files in other folders)
