[project]
name = "aoc2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Austin Schaffer", email = "aschaffer@sitetechnologies.io" }
]
requires-python = ">=3.13"
dependencies = [
    "z3-solver>=4.15.4.0",
]

[project.scripts]
aoc2025 = "aoc2025:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
