[tool.poetry]
name = "aoc-boilerplate"
version = "0.1.0"
description = ""
authors = ["Austin Schaffer <schaffer.austin.t@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.12"
advent-of-code-data = "^2.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
markdownify = "^0.11.6"

[tool.poetry.scripts]
aocbp = "aoc_boilerplate.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
