[tool.poetry]
name = "day-23"
version = "0.1.0"
description = ""
authors = ["Austin Schaffer <schaffer.austin.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
astar = "^0.99"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
